path bug fix.